<resources>
    <string name="app_name">Technical Test Inveli</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masukan_title_project">Masukan Title Project</string>
    <string name="tambah_project">Tambah Project</string>
    <string name="titleproject">Title Project</string>
    <string name="arcived">Status</string>
    <string name="tanggal_pembuatan">Tanggal Pembuatan</string>
    <string name="buat_task_baru">Buat Task Baru</string>
    <string name="nama_task">Nama Task</string>
    <string name="priority">Priority</string>
    <string name="deadline">Deadline</string>
    <string name="status">Status</string>
    <string name="hapus">Hapus</string>
    <string name="simpan">Simpan</string>
    <string name="dibuat">Dibuat</string>
    <string name="ubah">Ubah</string>
    <string name="hapusproject">Hapus Project</string>
    <string name="ubahproject">Ubah Project</string>
    <string name="tambahtask">Tambah Task</string>
</resources>
