<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:padding="@dimen/paddingMedium"
    tools:context=".View.Task.DetailTaskFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/layoutDetailTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/paddingSmall">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lNameTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nameTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_task"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lCreateAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/createAt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dibuat" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/priority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/priority"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/status"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lDeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/deadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deadline"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutDetailTask"
        android:layout_marginLeft="@dimen/marginSmaller"
        android:layout_marginRight="@dimen/marginSmaller"
        android:weightSum="2">

        <Button
            android:id="@+id/btDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:drawableRight="@drawable/ic_delete"
            android:padding="@dimen/paddingSmall"
            android:text="@string/hapus"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:drawableRight="@drawable/ic_edit"
            android:drawableTint="@android:color/white"
            android:padding="@dimen/paddingSmall"
            android:text="@string/ubah"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>