<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".View.Task.NewTaskFragment"
    android:padding="@dimen/paddingMedium">

    <android.support.v7.widget.CardView
        android:id="@+id/layoutTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/marginSmall">
            <TextView
                android:text="@string/buat_task_baru"
                android:textStyle="bold"
                android:textSize="@dimen/textLarge"
                android:layout_marginBottom="@dimen/marginMedium"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lNameTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nameTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_task"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/priority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/priority"
                    android:imeOptions="actionNext"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lDeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/deadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deadline"
                    android:imeOptions="actionDone"
                    android:inputType="none"
                    android:editable="false"
                    android:focusable="false"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <Button
        android:id="@+id/btSave"
        android:text="@string/simpan"
        android:layout_below="@+id/layoutTasks"
        android:layout_marginRight="@dimen/marginSmall"
        android:layout_marginLeft="@dimen/marginSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:drawableRight="@drawable/ic_save"
        android:padding="@dimen/paddingSmall"/>
</RelativeLayout>